--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.3",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/live-updates": "^0.1.0",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@hookform/resolvers": "^3.1.1",
