--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-pwa": "^0.17.5",
     "vitest": "^0.29.2"
   },
-  "description": "An Ionic project"
+  "description": "Cube J Empire ecommerce app"
 }
